--- a/config.org
+++ b/config.org
@@ -1,3 +1,13 @@
+#+title: 我的Emacs配置
+#+author: keke
+#+email: liushike1997@gmail.com
+#+date: <2020-04-17 Fri>
+#+export_file_name: ~/keke-cute.github.io/blog/myemacsconf.html
+#+options: creator:t author:t
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/m-dark.css" />
+#+HTML_HEAD_EXTRA: <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,400i,600%7CSource+Sans+Pro:400,400i,600&amp;subset=latin-ext" />
+#+HTML_HEAD_EXTRA: <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+#+OPTIONS: html-style:nil
 * Straight.el
   #+begin_src emacs-lisp
     (defvar bootstrap-version)
@@ -25,14 +35,20 @@
     (defconst *is-a-mac* (eq system-type 'darwin))
     (defconst *is-a-linux* (eq system-type 'gnu/linux))
   #+end_src
+* Is graphic?
+  #+begin_src emacs-lisp
+    (defun graphic-p ()
+      (display-graphic-p))
+  #+end_src
 * UI
   #+begin_src emacs-lisp
-    (menu-bar-mode -1)
-    (tool-bar-mode -1)
-    (scroll-bar-mode -1)
-    (global-linum-mode 1)
-    ;;(setq inhibit-startup-message t)
-    (global-hl-line-mode t)
+    (when (graphic-p) 
+      (menu-bar-mode -1)
+      (tool-bar-mode -1)
+      (scroll-bar-mode -1)
+      (global-linum-mode 1))
+      ;;(setq inhibit-startup-message t)
+      ;;(global-hl-line-mode t))
     ;;字体
     (when *is-a-mac*
     (set-frame-font "Monaco 14"))
@@ -43,29 +59,39 @@
 		"fontset-default" 'unicode "Noto Color Emoji" nil 'prepend)
 	     (set-fontset-font
 	      t 'symbol (font-spec :family "Noto Color Emoji") nil 'prepend))
+    ;;主题
+    (when (graphic-p)
+      (add-to-list 'custom-theme-load-path "~/.emacs.d/themes/")
+      (load-theme `wilmersdorf t))
+    ;;透明
+    (when (graphic-p)
+      (add-to-list 'default-frame-alist'(ns-transparent-titlebar . t))
+      (add-to-list 'default-frame-alist'(ns-appearance . dark))
+      (add-to-list 'default-frame-alist'(alpha . (80 . 75))))
     ;;🌈括号
     (straight-use-package 'rainbow-delimiters)
-    (use-package rainbow-delimiters
+    (use-package 
+      rainbow-delimiters 
       :config
-      (set-face-foreground 'rainbow-delimiters-depth-1-face "orange red")
-      (set-face-foreground 'rainbow-delimiters-depth-2-face "gold")
-      (set-face-foreground 'rainbow-delimiters-depth-3-face "yellow")
-      (set-face-foreground 'rainbow-delimiters-depth-4-face "spring green")
-      (set-face-foreground 'rainbow-delimiters-depth-5-face "cyan")
-      (set-face-foreground 'rainbow-delimiters-depth-6-face "magenta")
-      (set-face-foreground 'rainbow-delimiters-depth-7-face "goldenrod")
-      (set-face-foreground 'rainbow-delimiters-depth-8-face "IndianRed1")
-      (set-face-foreground 'rainbow-delimiters-depth-9-face "ivory1")
-
-      (set-face-bold 'rainbow-delimiters-depth-1-face "orange red")
-      (set-face-bold 'rainbow-delimiters-depth-2-face "gold")
-      (set-face-bold 'rainbow-delimiters-depth-3-face "yellow")
-      (set-face-bold 'rainbow-delimiters-depth-4-face "spring green")
-      (set-face-bold 'rainbow-delimiters-depth-5-face "cyan")
-      (set-face-bold 'rainbow-delimiters-depth-6-face "magenta")
-      (set-face-bold 'rainbow-delimiters-depth-7-face "goldenrod")
-      (set-face-bold 'rainbow-delimiters-depth-8-face "IndianRed1")
-      (set-face-bold 'rainbow-delimiters-depth-9-face "ivory1")
+      ;; 设置每一级括号的颜色
+      (set-face-foreground 'rainbow-delimiters-depth-1-face "orange red") 
+      (set-face-foreground 'rainbow-delimiters-depth-2-face "gold") 
+      (set-face-foreground 'rainbow-delimiters-depth-3-face "yellow") 
+      (set-face-foreground 'rainbow-delimiters-depth-4-face "spring green") 
+      (set-face-foreground 'rainbow-delimiters-depth-5-face "cyan") 
+      (set-face-foreground 'rainbow-delimiters-depth-6-face "magenta") 
+      (set-face-foreground 'rainbow-delimiters-depth-7-face "goldenrod") 
+      (set-face-foreground 'rainbow-delimiters-depth-8-face "IndianRed1") 
+      (set-face-foreground 'rainbow-delimiters-depth-9-face "ivory1") 
+      (set-face-bold 'rainbow-delimiters-depth-1-face "t") 
+      (set-face-bold 'rainbow-delimiters-depth-2-face "t") 
+      (set-face-bold 'rainbow-delimiters-depth-3-face "t") 
+      (set-face-bold 'rainbow-delimiters-depth-4-face "t") 
+      (set-face-bold 'rainbow-delimiters-depth-5-face "t") 
+      (set-face-bold 'rainbow-delimiters-depth-6-face "t") 
+      (set-face-bold 'rainbow-delimiters-depth-7-face "t") 
+      (set-face-bold 'rainbow-delimiters-depth-8-face "t") 
+      (set-face-bold 'rainbow-delimiters-depth-9-face "t") 
       (add-hook 'prog-mode-hook #'rainbow-delimiters-mode))
   #+end_src
 * Editor
