--- a/config.org
+++ b/config.org
@@ -129,6 +129,7 @@
      (define-key key-translation-map (kbd "ESC") (kbd "C-g"))
      (define-key xah-fly-w-keymap (kbd "o") 'xah-html-open-in-chrome-browser)
      (define-key xah-fly-w-keymap (kbd "1") 'delete-other-windows)
+     (define-key xah-fly-w-keymap (kbd "t") 'treemacs)
    #+END_SRC 
 ** which_key
    #+begin_src emacs-lisp
