--- a/config.org
+++ b/config.org
@@ -56,9 +56,9 @@
       (set-frame-font "Operator Mono Light 12"))
     (if (version< "27.0" emacs-version)
 	       (set-fontset-font
-		"fontset-default" 'unicode "Noto Color Emoji" nil 'prepend)
+		"fontset-default" 'unicode "Apple Color Emoji" nil 'prepend)
 	     (set-fontset-font
-	      t 'symbol (font-spec :family "Noto Color Emoji") nil 'prepend))
+	      t 'symbol (font-spec :family "Apple Color Emoji") nil 'prepend))
     ;;主题
     (when (graphic-p)
       (add-to-list 'custom-theme-load-path "~/.emacs.d/themes/")
