--- a/config.org
+++ b/config.org
@@ -47,22 +47,39 @@
       (tool-bar-mode -1)
       (scroll-bar-mode -1)
       (global-linum-mode 1))
-      ;;(setq inhibit-startup-message t)
-      ;;(global-hl-line-mode t))
+    ;;(setq inhibit-startup-message t)
+    ;;(global-hl-line-mode t))
     ;;字体
     (when *is-a-mac*
-    (set-frame-font "Operator Mono 14"))
+      (set-frame-font "Operator Mono 14"))
     (when *is-a-linux*
       (set-frame-font "Operator Mono 12"))
     (if (version< "27.0" emacs-version)
-	       (set-fontset-font
-		"fontset-default" 'unicode "Apple Color Emoji" nil 'prepend)
-	     (set-fontset-font
-	      t 'symbol (font-spec :family "Apple Color Emoji") nil 'prepend))
+	(set-fontset-font
+	 "fontset-default" 'unicode "Apple Color Emoji" nil 'prepend)
+      (set-fontset-font
+       t 'symbol (font-spec :family "Apple Color Emoji") nil 'prepend))
     ;;主题
     (when (graphic-p)
-      (add-to-list 'custom-theme-load-path "~/.emacs.d/themes/")
-      (load-theme `wilmersdorf t))
+      (straight-use-package 'doom-themes)
+      (use-package doom-themes
+	:config
+	;; Global settings (defaults)
+	(setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+	      doom-themes-enable-italic t) ; if nil, italics is universally disabled
+	(load-theme 'doom-spacegrey t)
+
+	;; Enable flashing mode-line on errors
+	(doom-themes-visual-bell-config)
+
+	;; Enable custom neotree theme (all-the-icons must be installed!)
+	(doom-themes-neotree-config)
+	;; or for treemacs users
+	(setq doom-themes-treemacs-theme "doom-colors") ; use the colorful treemacs theme
+	(doom-themes-treemacs-config)
+
+	;; Corrects (and improves) org-mode's native fontification.
+	(doom-themes-org-config)))
     ;;透明
     (when (graphic-p)
       (add-to-list 'default-frame-alist'(ns-transparent-titlebar . t))
@@ -99,8 +116,8 @@
     (straight-use-package 'nyan-mode)
     (use-package nyan-mode
       :init (setq nyan-animate-nyancat t
-		       nyan-bar-length 16
-		       nyan-wavy-trail t)
+		  nyan-bar-length 16
+		  nyan-wavy-trail t)
       :hook ((after-init . nyan-mode)))
   #+end_src
 * Editor
