--- a/config.org
+++ b/config.org
@@ -152,7 +152,6 @@
    #+begin_src emacs-lisp
      (require 'tramp)
      (setq tramp-default-method "sshx")
-     (setq tramp-default-user "keke")
      (setq tramp-default-user "keke"
 	   tramp-default-host "192.168.2.166")
    #+end_src
@@ -206,12 +205,7 @@
 	      (typescript-mode . lsp)
 	      ;; if you want which-key integration
 	      (lsp-mode . lsp-enable-which-key-integration))
-       :commands lsp
-       :config (lsp-register-client
-       (make-lsp-client :new-connection (lsp-tramp-connection "html-languageserver")
-       :major-modes '(html-mode)
-       :remote? t
-       :server-id 'html-remote)))
+       :commands lsp)
      (use-package lsp-ui :commands lsp-ui-mode)
      (use-package lsp-treemacs :commands lsp-treemacs-errors-list)
    #+end_src
