--- a/config.org
+++ b/config.org
@@ -63,6 +63,19 @@
     (setq create-lockfiles nil)
   #+end_src
 * Package
+** Eaf
+   #+begin_src emacs-lisp
+     (when (graphic-p)
+       (when *is-a-linux*
+	 (use-package eaf
+	   :load-path "~/src/emacs-application-framework" ; Set to "/usr/share/emacs/site-lisp/eaf" if installed from AUR
+	   :custom
+	   (eaf-find-alternate-file-in-dired t)
+	   :config
+	   (eaf-bind-key scroll_up "C-n" eaf-pdf-viewer-keybinding)
+	   (eaf-bind-key scroll_down "C-p" eaf-pdf-viewer-keybinding)
+	   (eaf-bind-key take_photo "p" eaf-camera-keybinding))))
+   #+end_src
 ** Roam
    #+begin_src emacs-lisp
      (use-package org-roam
