--- a/config.org
+++ b/config.org
@@ -125,5 +125,6 @@
 			   :repo "DogLooksGood/emacs-rime"
 			   :files ("*.el" "Makefile" "lib.c"))
 	   :custom
-	   (default-input-method "rime"))))
+	   (default-input-method "rime")
+	   (rime-show-candidate "posframe"))))
    #+end_src
