--- a/config.org
+++ b/config.org
@@ -42,12 +42,35 @@
     (when (graphic-p) 
       (scroll-bar-mode -1)
       (global-linum-mode 1)
+      (setq org-startup-with-inline-images t)
+      (setq initial-frame-alist
+	    '(
+	      (width . 106)
+	      (height . 56)
+	      ))
       (straight-use-package 'poke-line)
       (use-package poke-line
 	:config
 	(poke-line-mode 1)
 	(poke-line-set-pokemon "gengar")
 	(setq poke-line-bar-length 10)))
+    ;; 字体设置
+    (when (graphic-p)
+      (when *is-a-mac*
+	(let ((emacs-font-size 14)
+	      (emacs-font-name "Monaco"))
+	  (set-frame-font (format "%s-%s" (eval emacs-font-name) (eval emacs-font-size)))
+	  (set-fontset-font (frame-parameter nil 'font) 'unicode (eval emacs-font-name)))
+
+	(with-eval-after-load 'org
+	  (defun org-buffer-face-mode-variable ()
+	    (interactive)
+	    (make-face 'width-font-face)
+	    (set-face-attribute 'width-font-face nil :font "Sarasa Mono SC 15")
+	    (setq buffer-face-mode-face 'width-font-face)
+	    (buffer-face-mode))
+
+	  (add-hook 'org-mode-hook 'org-buffer-face-mode-variable))))
   #+end_src
 * Editor
   #+begin_src emacs-lisp
