--- a/config.org
+++ b/config.org
@@ -43,6 +43,7 @@
     (when (graphic-p) 
       (scroll-bar-mode -1)
       (global-linum-mode 1)
+      (tool-bar-mode -1)
       (setq org-startup-with-inline-images t)
       (setq initial-frame-alist
 	    '(
