--- a/config.org
+++ b/config.org
@@ -156,3 +156,11 @@
 	   (default-input-method "rime")
 	   (rime-show-candidate 'posframe))))
    #+end_src
+** sudo-save
+   #+begin_src emacs-lisp
+     (defun sudo-save ()
+       (interactive)
+       (if (not buffer-file-name)
+	   (write-file (concat "/sudo:root@localhost:" (ido-read-file-name "File:")))
+	 (write-file (concat "/sudo:root@localhost:" buffer-file-name))))
+   #+end_src
