--- a/config.org
+++ b/config.org
@@ -40,7 +40,8 @@
   #+end_src
 * UI
   #+begin_src emacs-lisp
-    (when (graphic-p) 
+    (when (graphic-p)
+      (menu-bar-mode -1)
       (scroll-bar-mode -1)
       (global-linum-mode 1)
       (tool-bar-mode -1)
@@ -50,24 +51,24 @@
 	      (width . 106)
 	      (height . 56)
 	      )))
+    (straight-use-package 'modus-operandi-theme)
+    (straight-use-package 'modus-vivendi-theme)
+    (load-theme 'modus-vivendi t)
     (display-time-mode 1)
     ;; 字体设置
     (when (graphic-p)
-      (when *is-a-mac*
-	(let ((emacs-font-size 14)
-	      (emacs-font-name "Monaco"))
-	  (set-frame-font (format "%s-%s" (eval emacs-font-name) (eval emacs-font-size)))
-	  (set-fontset-font (frame-parameter nil 'font) 'unicode (eval emacs-font-name)))
-
-	(with-eval-after-load 'org
-	  (defun org-buffer-face-mode-variable ()
-	    (interactive)
-	    (make-face 'width-font-face)
-	    (set-face-attribute 'width-font-face nil :font "Sarasa Mono SC 15")
-	    (setq buffer-face-mode-face 'width-font-face)
-	    (buffer-face-mode))
-
-	  (add-hook 'org-mode-hook 'org-buffer-face-mode-variable))))
+      (let ((emacs-font-size 14)
+	    (emacs-font-name "OperatorMono Nerd Font"))
+	(set-frame-font (format "%s-%s" (eval emacs-font-name) (eval emacs-font-size)))
+	(set-fontset-font (frame-parameter nil 'font) 'unicode (eval emacs-font-name)))
+      (with-eval-after-load 'org
+	(defun org-buffer-face-mode-variable ()
+	  (interactive)
+	  (make-face 'width-font-face)
+	  (set-face-attribute 'width-font-face nil :font "Sarasa Mono SC 15")
+	  (setq buffer-face-mode-face 'width-font-face)
+	  (buffer-face-mode))
+	(add-hook 'org-mode-hook 'org-buffer-face-mode-variable)))
   #+end_src
 * Editor
   #+begin_src emacs-lisp
@@ -136,12 +137,4 @@
 	   :custom
 	   (default-input-method "rime")
 	   (rime-show-candidate 'posframe))))
-   #+end_src
-** sudo-save
-   #+begin_src emacs-lisp
-     (defun sudo-save ()
-       (interactive)
-       (if (not buffer-file-name)
-	   (write-file (concat "/sudo:root@localhost:" (ido-read-file-name "File:")))
-	 (write-file (concat "/sudo:root@localhost:" buffer-file-name))))
    #+end_src
