--- a/config.org
+++ b/config.org
@@ -102,31 +102,32 @@
 * Package
 ** Roam
    #+begin_src emacs-lisp
-     (straight-use-package 'org-roam)
-     (straight-use-package 'org-roam-server)
-     (use-package org-roam
-       :hook
-       (after-init . org-roam-mode)
-       :custom
-       (org-roam-directory "~/src/org/roam")
-       :bind (:map org-roam-mode-map
-		   (("C-c n l" . org-roam)
-		    ("C-c n f" . org-roam-find-file)
-		    ("C-c n g" . org-roam-graph-show))
-		   :map org-mode-map
-		   (("C-c n i" . org-roam-insert))
-		   (("C-c n I" . org-roam-insert-immediate))))
-     (use-package org-roam-server
-       :config
-       (setq org-roam-server-host "127.0.0.1"
-	   org-roam-server-port 9090
-	   org-roam-server-export-inline-images t
-	   org-roam-server-authenticate nil
-	   org-roam-server-label-truncate t
-	   org-roam-server-label-truncate-length 60
-	   org-roam-server-label-wrap-length 20)
-       (org-roam-server-mode)
-       (require 'org-roam-protocol))
+     ;;(straight-use-package 'org-roam)
+     ;;(straight-use-package 'org-roam-server)
+     ;;(use-package org-roam
+     ;;  :hook
+     ;;  (after-init . org-roam-mode)
+     ;;  :custom
+     ;;  (org-roam-directory "~/src/org/roam")
+     ;;  :bind (:map org-roam-mode-map
+     ;;	      (("C-c n l" . org-roam)
+     ;;	       ("C-c n f" . org-roam-find-file)
+     ;;	       ("C-c n g" . org-roam-graph-show))
+     ;;	      :map org-mode-map
+     ;;	      (("C-c n i" . org-roam-insert))
+     ;;	      (("C-c n I" . org-roam-insert-immediate))))
+     ;;(use-package org-roam-server
+     ;;  :config
+     ;;  (setq org-roam-server-host "127.0.0.1"
+     ;;      org-roam-server-port 9090
+     ;;      org-roam-server-export-inline-images t
+     ;;      org-roam-server-authenticate nil
+     ;;      org-roam-server-label-truncate t
+     ;;      org-roam-server-label-truncate-length 60
+     ;;      org-roam-server-label-wrap-length 20)
+     ;;  (org-roam-server-mode)
+     ;;  (require 'org-roam-protocol))
+     ;;
    #+end_src
 ** Which-key
    #+begin_src emacs-lisp
