--- a/readme.org
+++ b/readme.org
@@ -8,7 +8,7 @@
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,400i,600%7CSource+Sans+Pro:400,400i,600&amp;subset=latin-ext" />
 #+HTML_HEAD_EXTRA: <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 #+OPTIONS: html-style:nil
-- this is my emacs config, old archive see other branch
+- this is my curreent emacs config, old archive see other branch
 * Straight.el
   #+begin_src emacs-lisp
     (defvar bootstrap-version)
