--- a/readme.org
+++ b/readme.org
@@ -46,17 +46,13 @@
   #+end_src
 * UI
   #+begin_src emacs-lisp
-    ;; teansparent title(mac only)
-    (when (memq window-system '(mac ns))
-      (add-to-list 'default-frame-alist '(ns-appearance . dark)) ; nil for dark text
-      (add-to-list 'default-frame-alist '(ns-transparent-titlebar . t)))
 
     (when (graphic-p)
       ;;  transparent frame
-      ;;  (add-to-list 'default-frame-alist'(ns-transparent-titlebar . t))
-      ;;  (add-to-list 'default-frame-alist'(ns-appearance . dark))
-      ;;  (add-to-list 'default-frame-alist'(alpha . (80 . 75)))
-      (menu-bar-mode 1)
+      (add-to-list 'default-frame-alist'(ns-transparent-titlebar . t))
+      (add-to-list 'default-frame-alist'(ns-appearance . dark))
+      (add-to-list 'default-frame-alist'(alpha . (80 . 75)))
+      (menu-bar-mode -1)
       (scroll-bar-mode -1)
       (global-linum-mode 1)
       (tool-bar-mode -1)
@@ -69,6 +65,12 @@
       ;;	      )))
       )
     (display-time-mode 1)
+    ;; teansparent title(mac only)
+    (when (memq window-system '(mac ns))
+      (menu-bar-mode 1)
+      (add-to-list 'default-frame-alist '(ns-appearance . dark)) ; nil for dark text
+      (add-to-list 'default-frame-alist '(ns-transparent-titlebar . t)))
+
     ;; 指定模式禁用行号
     (add-hook 'vterm-mode-hook 'my-inhibit-global-linum-mode)
     (defun my-inhibit-global-linum-mode ()
