--- a/readme.org
+++ b/readme.org
@@ -9,6 +9,10 @@
 #+HTML_HEAD_EXTRA: <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 #+OPTIONS: html-style:nil
 - this is my curreent emacs config, old archive see other branch
+- git clone me, and
+#+begin_src shell
+  git submodule update --init --recursive
+#+end_src
 * Straight.el
   #+begin_src emacs-lisp
     (defvar bootstrap-version)
