--- a/readme.org
+++ b/readme.org
@@ -8,8 +8,9 @@
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,400i,600%7CSource+Sans+Pro:400,400i,600&amp;subset=latin-ext" />
 #+HTML_HEAD_EXTRA: <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 #+OPTIONS: html-style:nil
+[[./2020-10-11_17-31.png]]
 - this is my curreent emacs config, old archive see other branch
-- git clone me, and
+- git clone me, and run:
 #+begin_src shell
   git submodule update --init --recursive
 #+end_src
