--- a/readme.org
+++ b/readme.org
@@ -2,7 +2,7 @@
 #+author: keke
 #+email: liushike1997@gmail.com
 #+date: <2020-09-13 Sun>
-#+export_file_name: ~/src/keke-cute.github.io/blog/myemacsconf.html
+#+export_file_name: ~/Src/keke-cute.github.io/blog/myemacsconf.html
 #+options: creator:t author:t
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/m-dark.css" />
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,400i,600%7CSource+Sans+Pro:400,400i,600&amp;subset=latin-ext" />
