--- a/readme.org
+++ b/readme.org
@@ -34,6 +34,7 @@
     (straight-use-package 'magit)
     (straight-use-package 'vterm)
     (straight-use-package 'terraform-mode)
+    (straight-use-package 'posframe)
   #+end_src
 * Is A?
   #+begin_src emacs-lisp
@@ -59,6 +60,8 @@
       (scroll-bar-mode -1)
       (global-linum-mode 1)
       (tool-bar-mode -1)
+      (global-hl-line-mode t)
+      (setq inhibit-splash-screen t)
       (setq org-startup-with-inline-images t)
       ;; default frame size
       ;;      (setq initial-frame-alist
@@ -144,6 +147,44 @@
     (fset 'yes-or-no-p 'y-or-n-p)
   #+end_src
 * Package
+** Ivy
+   #+begin_src emacs-lisp
+     (straight-use-package 'ivy)
+     (straight-use-package 'swiper)
+     (straight-use-package 'counsel)
+     (straight-use-package 'ivy-posframe)
+     (ivy-mode 1)
+     (setq ivy-use-virtual-buffers t)
+     (setq enable-recursive-minibuffers t)
+     ;; enable this if you want `swiper' to use it
+     ;; (setq search-default-mode #'char-fold-to-regexp)
+     (global-set-key "\C-s" 'swiper)
+     (global-set-key (kbd "C-c C-r") 'ivy-resume)
+     (global-set-key (kbd "<f6>") 'ivy-resume)
+     (global-set-key (kbd "M-x") 'counsel-M-x)
+     (global-set-key (kbd "C-x C-f") 'counsel-find-file)
+     (global-set-key (kbd "<f1> f") 'counsel-describe-function)
+     (global-set-key (kbd "<f1> v") 'counsel-describe-variable)
+     (global-set-key (kbd "<f1> o") 'counsel-describe-symbol)
+     (global-set-key (kbd "<f1> l") 'counsel-find-library)
+     (global-set-key (kbd "<f2> i") 'counsel-info-lookup-symbol)
+     (global-set-key (kbd "<f2> u") 'counsel-unicode-char)
+     (global-set-key (kbd "C-c g") 'counsel-git)
+     (global-set-key (kbd "C-c j") 'counsel-git-grep)
+     (global-set-key (kbd "C-c k") 'counsel-ag)
+     (global-set-key (kbd "C-x l") 'counsel-locate)
+     (global-set-key (kbd "C-S-o") 'counsel-rhythmbox)
+     (define-key minibuffer-local-map (kbd "C-r") 'counsel-minibuffer-history)
+     (require 'ivy-posframe)
+     ;; display at `ivy-posframe-style'
+     (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display)))
+     ;; (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display-at-frame-center)))
+     ;; (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display-at-window-center)))
+     ;; (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display-at-frame-bottom-left)))
+     ;; (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display-at-window-bottom-left)))
+     ;; (setq ivy-posframe-display-functions-alist '((t . ivy-posframe-display-at-frame-top-center)))
+     (ivy-posframe-mode 1)
+   #+end_src
 ** Roam
    #+begin_src emacs-lisp
      ;;(straight-use-package 'org-roam)
@@ -195,11 +236,11 @@
    #+end_src
 ** helm
    #+begin_src emacs-lisp
-     (straight-use-package 'helm)
-     (global-set-key (kbd "M-x") #'helm-M-x)
-     (global-set-key (kbd "C-x r b") #'helm-filtered-bookmarks)
-     (global-set-key (kbd "C-x C-f") #'helm-find-files)
-     (helm-mode 1)
+     ;;(straight-use-package 'helm)
+     ;;(global-set-key (kbd "M-x") #'helm-M-x)
+     ;;(global-set-key (kbd "C-x r b") #'helm-filtered-bookmarks)
+     ;;(global-set-key (kbd "C-x C-f") #'helm-find-files)
+     ;;(helm-mode 1)
    #+end_src
 ** ace-window
    #+begin_src emacs-lisp
